# klima

./: Cargo.toml
src/: main.rs
src/dst/: mod.rs
src/dst/models/: data.rs  metadata.rs
src/table/: mod.rs
src/web/: mod.rs
test/data/: dst.data.response.bil51.json  dst.data.response.bil51.large.json  dst.metadata.response.bil51.json
